--- a/home.css
+++ b/home.css
@@ -332,6 +332,62 @@ img{
 .paying .paying-method .method p:hover{
     text-decoration: underline;
 }
+
+
+
+.mycart{
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    background: #fff;
+    border-top: 0.3px solid #ccc;
+    display: flex;
+    display: none;
+}
+.mycart .left-cart{
+    width: 40%;
+    border-right: 0.3px solid #ccc;
+    padding: 200px 150px 310px 100px;
+}
+.mycart .left-cart h1{
+    font-family: sans-serif;
+    font-size: 40px;
+}
+.mycart .left-cart button{
+    margin: 100px 0px 0px 10px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    height: 60px;
+    width: 300px;
+    border-radius: 50px;
+    font-family: 'loto',sans-serif;
+    font-size: 18px;
+    background: #272727;
+    color: #fff;
+}
+.mycart .close-cart{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    padding: 5px;
+    font-size: 25px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    margin: 0px 0px 0px 1400px;
+    cursor: pointer;
+}
+.mycart .close-cart:hover{
+    background: #000;
+    color: #fff;
+}
+.mycart .right-cart{
+    width: 60%;
+    
+
+}
 /*searching page*/
 
 .product-container{
